[package]
name = "WebtoonPrepView"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
url = "2.5.0"
horrorshow = "0.8.4"
urlencoding = "2.1.3"
regex = "1.10.4"